--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql-tag": "^2.12.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-paginate": "^8.2.0",
     "react-slider": "^2.0.6"
   },
   "devDependencies": {
